Web Inspector: InspectorInstrumentation::willEvaluateScript should include column number https://bugs.webkit.org/show_bug.cgi?id=116191 <rdar://problem/13905910>

Reviewed by Joseph Pecoraro.

Source/WebCore:

Test inspector/timeline/line-column.html

* bindings/js/ScriptController.cpp:
(WebCore::ScriptController::evaluateInWorld):
(WebCore::ScriptController::evaluateModule):

* bindings/js/JSExecStateInstrumentation.h:
(WebCore::JSExecState::instrumentFunctionInternal):

* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::willCallFunction):
(WebCore::InspectorInstrumentation::willEvaluateScript):
* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::willCallFunctionImpl):
(WebCore::InspectorInstrumentation::willEvaluateScriptImpl):

* inspector/agents/InspectorTimelineAgent.h:
* inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::willCallFunction):
(WebCore::InspectorTimelineAgent::willEvaluateScript):

* inspector/TimelineRecordFactory.h:
* inspector/TimelineRecordFactory.cpp:
(WebCore::TimelineRecordFactory::createFunctionCallData):
(WebCore::TimelineRecordFactory::createEvaluateScriptData):

* bindings/js/ScriptSourceCode.h:
(WebCore::ScriptSourceCode::startColumn const): Added.

Source/WebInspectorUI:

* UserInterface/Controllers/TimelineManager.js:
(WI.TimelineManager.prototype._processRecord):

LayoutTests:

* inspector/timeline/line-column.html: Added.
* inspector/timeline/line-column-expected.txt: Added.


Canonical link: https://commits.webkit.org/208221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240323 268f45cc-cd09-0410-ab3c-d52691b4dbfc