Source/WebCore/inspector/TimelineRecordFactory.h
@@ -49,13 +49,13 @@ class TimelineRecordFactory {
 public:
     static Ref<JSON::Object> createGenericRecord(double startTime, int maxCallStackDepth);
 
-    static Ref<JSON::Object> createFunctionCallData(const String& scriptName, int scriptLine);
+    static Ref<JSON::Object> createFunctionCallData(const String& scriptName, int scriptLine, int scriptColumn);
     static Ref<JSON::Object> createConsoleProfileData(const String& title);
     static Ref<JSON::Object> createProbeSampleData(const Inspector::ScriptBreakpointAction&, unsigned sampleId);
     static Ref<JSON::Object> createEventDispatchData(const Event&);
     static Ref<JSON::Object> createGenericTimerData(int timerId);
     static Ref<JSON::Object> createTimerInstallData(int timerId, Seconds timeout, bool singleShot);
-    static Ref<JSON::Object> createEvaluateScriptData(const String&, double lineNumber);
+    static Ref<JSON::Object> createEvaluateScriptData(const String&, int lineNumber, int columnNumber);
     static Ref<JSON::Object> createTimeStampData(const String&);
     static Ref<JSON::Object> createAnimationFrameData(int callbackId);
     static Ref<JSON::Object> createObserverCallbackData(const String& callbackType);
